--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 
 <body>
 	<header class="main-header">
-		<div class="main-header-content"></div>
+		<div class="main-header-content">
+			<div class="main-header-top-bar">
+				<div class="brand-logo font-serif">MNTN</div>
+				<nav class="main-header-nav">
+					<a href="#">Equipment</a>
+					<a href="#">About Us</a>
+					<a href="#">Blog</a>
+				</nav>
+			</div>
+		</div>
 	</header>
 </body>
 
