--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="font-sans">
 	<header class="main-header">
 		<div class="main-header-content">
 			<div class="main-header-top-bar">
@@ -23,6 +23,19 @@
 					<a href="#">About Us</a>
 					<a href="#">Blog</a>
 				</nav>
+			</div>
+			<div class="main-header-title-container">
+				<h1 class="section-tagline">A Hiking Guide</h1>
+				<div class="main-header-title font-serif">
+					Be prepared for the Mountains and beyond!
+				</div>
+				<div class="scroll-down">
+					scroll down
+					<svg viewBox="0 0 16 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M16 16L14.59 14.59L9 20.17V0H7V20.17L1.42 14.58L0 16L8 24L16 16Z"
+							fill="currentColor" />
+					</svg>
+				</div>
 			</div>
 		</div>
 	</header>
