--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 		</div>
 	</header>
 	<div class="header-fade-out"></div>
+	<div class="content-container">
+		<main class="main-content">
+			<section class="section"></section>
+		</main>
+	</div>
 </body>
 
 </html>
