feat: add two text wrappers on markup
These are the reasons:
1. the first wrapper is specifically just to position relative our 01
text
2. the second wrapper is to make sure our text is positioned exactly
where we want it over top of the 01 text

This allows us to fine-tune where the number is showing up and where the
text is showing up independently of one another

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 	<div class="header-fade-out"></div>
 	<div class="content-container">
 		<main class="main-content">
-			<section class="section"></section>
+			<section class="section">
+				<div class="section-text-wrapper" data-number="01">
+					<div class="section-text-container"></div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
