--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
 				</div>
 				<img src="./imgs/01.jpg" alt="Hiker walking on a ridge" class="section-img">
 			</section>
+			<section class="section">
+				<img src="./imgs/02.jpg" alt="Hiker standing on top of a cliff" class="section-img">
+				<div class="section-text-wrapper" data-number="02">
+					<div class="section-text-container">
+						<div class="section-tagline">Hiking essentials</div>
+						<h2 class="section-title font-serif">
+							Picking The Right Hiking Gear!
+						</h2>
+						<p class="section-text">
+							The nice thing about beginning hiking is that you don’t really
+							need any special gear, you can probably get away with things you
+							already have.
+							Let’s start with clothing. A typical mistake hiking beginners
+							make is wearing jeans and regular clothes, which will get heavy
+							and chafe wif they get sweaty or wet. </p>
+						<a href="#" class="read-more-link">Read More
+							<svg viewBox="0 0 16 24" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path d="M16 16L14.59 14.59L9 20.17V0H7V20.17L1.42 14.58L0 16L8 24L16 16Z"
+									fill="currentColor" />
+							</svg>
+						</a>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
