feat: add third section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,30 @@
 					</div>
 				</div>
 			</section>
+			<section class="section">
+				<div class="section-text-wrapper" data-number="03">
+					<div class="section-text-container">
+						<div class="section-tagline">where you go is the key</div>
+						<h2 class="section-title font-serif">
+							Understand Your Map & Timing
+						</h2>
+						<p class="section-text">To start, print out the hiking guide and map. If
+							it’s raining, throw them in a Zip-Lock bag. Read over the guide,
+							study the map, and have a good idea of what to expect. I like to
+							know what my next landmark is as I hike. For example, I’ll read
+							the guide and know that say, in a mile, I make a right turn at
+							the junction.</p>
+						<a href="#" class="read-more-link">Read More
+							<svg viewBox="0 0 16 24" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path d="M16 16L14.59 14.59L9 20.17V0H7V20.17L1.42 14.58L0 16L8 24L16 16Z"
+									fill="currentColor" />
+							</svg>
+						</a>
+					</div>
+				</div>
+				<img src="./imgs/03.jpg" alt="Hand holding a compass" class="section-img">
+			</section>
 		</main>
 	</div>
 </body>
