fix: place right section order
The second section must conserve its normal order on smaller widths, for
which we added a class for fixing that little issue

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</div>
 				<img src="./imgs/01.jpg" alt="Hiker walking on a ridge" class="section-img">
 			</section>
-			<section class="section">
+			<section class="section section-reversed-order">
 				<img src="./imgs/02.jpg" alt="Hiker standing on top of a cliff" class="section-img">
 				<div class="section-text-wrapper" data-number="02">
 					<div class="section-text-container">
