--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="footer-subtitle">
 						Get out there & discover your next slope, mountain & destination!
 					</div>
-					<small class="copyright"></small>
+					<small class="copyright">Copyright 2025 MNTN, Inc. Terms & Privacy</small>
 				</div>
 				<div class="footer-links">
 					<div class="footer-link-section">
